syntax = "proto3";

package shorter;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/v1ack/linkShorter;linkShorter";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    schemes: HTTP;
    host: "localhost:11000";
    produces: "application/json";
};

service Shorter {
    rpc Create(CreateLinkRequest) returns (CreateLinkResponse) {
        option (google.api.http) = {
            post: "/create"
            body: "*"
        };
    }
    rpc Get(GetLinkRequest) returns (GetLinkResponse) {
        option (google.api.http) = {
            get: "/get/{link}"
        };
    }
}

message CreateLinkRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            required: ["link"]
        }
        example: "{\"link\": \"https://github.com\"}"
    };

    string link = 1;
}

message CreateLinkResponse {
    string short_link = 1;
}

message GetLinkRequest {
    string link = 1;
}

message GetLinkResponse {
    string original_link = 1;
}